# fullstack-gate-sensor

./: .env.dev.example  .env.prod.example  .gitignore  CONTEXT.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.context-archive/: 2026-06.md
.github/workflows/: backend-deploy.yml  frontend-deploy.yml
backend/: Dockerfile  GateSensor.Api.csproj  GateSensor.Api.http  Program.cs  appsettings.Development.json  appsettings.json
backend/Controllers/: DeviceController.cs  FirmwareController.cs  GateController.cs  SensorController.cs
backend/Data/: AppDbContext.cs
backend/Migrations/: 20260618011453_AddGateEvents.Designer.cs  20260618011453_AddGateEvents.cs  20260618120000_AddEventPipelineTimestamps.Designer.cs  20260618120000_AddEventPipelineTimestamps.cs  AppDbContextModelSnapshot.cs
backend/Models/: Device.cs  DeviceConfigResponse.cs  DeviceStatusSnapshot.cs  FirmwareManifest.cs  FirmwareUploadRequest.cs  Gate.cs  GateEvent.cs  GateStatusResponse.cs  ReceiverConfig.cs  Sensor.cs  TransmitterConfig.cs
backend/Mqtt/: MqttRelayHostedService.cs  MqttTopics.cs
backend/Services/: IDeviceConfigStore.cs  IDeviceStatusStore.cs  IFirmwarePublisher.cs  IGateAlertState.cs  IMqttPublisher.cs  MqttFirmwarePublisher.cs  MqttPublisher.cs  RedisDeviceConfigStore.cs  (+2 more)
firmware/: Cargo.toml  FIRMWARE_AUDIT.md
firmware/transmitter/: Cargo.toml  platformio.ini  sdkconfig.defaults
firmware/transmitter/include/: secrets.h.example
firmware/transmitter/src/: main.cpp  main.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
(+35 files in other folders)
