[package]
name = "gate-transmitter"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
esp-idf-svc = { version = "0.51", default-features = false, features = ["binstart", "std", "experimental", "mqtt", "wifi"] }
esp-idf-hal = "0.45"
embedded-svc = "0.28"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml-cfg = "0.2"

[build-dependencies]
embuild = "0.33"
